[package]
name = "earn-contract"
version = "0.2.0"
authors = ["Bruno <bruno@capapult.finance>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies.serde]
default-features = false
features = ["derive"]
version = "=1.0.127"


[dependencies.schemars]
version = "=0.8.3"

[dependencies.cosmwasm-std]
version = "=0.16.0"

[dependencies.cosmwasm-storage]
version = "=0.16.0"

[dependencies]
snafu = { version = "=0.6.10" }
base64 = "=0.13.0"
cw20 = "=0.8.0"
terra-cosmwasm = "=2.2.0"
cosmwasm-bignumber = "=2.2.0"
bigint="=4"

[dev-dependencies]
cosmwasm-schema = "=0.16.0"

[profile.dev]
overflow-checks = true